WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210215
REGRESSION (
r258525
): Occasional crashes under TextManipulationController::observeParagraphs
https://bugs.webkit.org/show_bug.cgi?id=210215
Summary
REGRESSION (r258525): Occasional crashes under TextManipulationController::ob...
Wenson Hsieh
Reported
2020-04-08 15:17:15 PDT
<
rdar://problem/61362512
> This is due to null start and/or end positions when creating the ParagraphContentIterator.
Attachments
Patch
(1.95 KB, patch)
2020-04-08 15:27 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-04-08 15:27:47 PDT
Created
attachment 395875
[details]
Patch
EWS
Comment 2
2020-04-08 16:59:36 PDT
Committed
r259766
: <
https://trac.webkit.org/changeset/259766
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395875
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug